tests/snapshots/cava_widget_full__cava_widget_breaks_at_height_overflow.snap
---
source: tests/cava_widget_full.rs
expression: "format!(\"{buf:?}\")"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 10, height: 2 },
    content: [
        "r0        ",
        "r1        ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
