tests/snapshots/cava_widget_full__cava_widget_renders_default_color.snap
---
source: tests/cava_widget_full.rs
expression: "format!(\"{buf:?}\")"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 10, height: 2 },
    content: [
        "Z         ",
        "          ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
