tests/snapshots/cava_widget_full__cava_widget_with_empty_screen_returns_early.snap
---
source: tests/cava_widget_full.rs
expression: "format!(\"{buf:?}\")"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 20, height: 5 },
    content: [
        "                    ",
        "                    ",
        "                    ",
        "                    ",
        "                    ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
