tests/snapshots/cava_widget_full__cava_widget_with_zero_area_returns_early.snap
---
source: tests/cava_widget_full.rs
expression: "format!(\"{buf:?}\")"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 0, height: 5 }
}
